Fix bug - scroll down not visible on phones

--- a/src/components/hero/hero.css
+++ b/src/components/hero/hero.css
@@ -170,6 +170,9 @@ div.weather-status button.scroll-down:hover {
   animation-play-state: paused;
 }
 @media screen and (max-width: 500px) {
+  div.weather-status button.scroll-down {
+    margin-bottom: 6rem;
+  }
   div.weather-status div.weather-info span {
     font-size: 1.7rem;
   }
